tests/invalid/runtime/io_invalid_mode.pts
import Io;

function main() : void {
    Io.openText("io_invalid.txt", "rw");
}
